[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.1",
    "google-auth-oauthlib>=1.2.1",
    "google-generativeai>=0.8.4",
    "langchain-google-genai>=2.0.10",
    "maxim>=1.0.0",
    "openai-agents>=0.0.4",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "websocket-client>=1.8.0",
]
